# NuScenes2Bag_ROS2

./: README.md
message_interfaces/: CMakeLists.txt  package.xml
nuscenes2bag/: CMakeLists.txt  package.xml
nuscenes2bag/include/nuscenes2bag/: EgoPoseConverter.hpp  ImageDirectoryConverter.hpp  LidarDirectoryConverter.hpp  LidarDirectoryConverterXYZIR.hpp  NuScenes2Bag.hpp  RadarDirectoryConverter.hpp  SceneConverter.hpp  test.hpp  utils.hpp
nuscenes2bag/include/nuscenes2bag/.ipynb_checkpoints/: NuScenes2Bag-checkpoint.hpp
nuscenes2bag/src/: EgoPoseConverter.cpp  ImageDirectoryConverter.cpp  LidarDirectoryConverter.cpp  LidarDirectoryConverterXYZIR.cpp  MetaDataReader.cpp  NuScenes2Bag.cpp  RadarDirectoryConverter.cpp  SceneConverter.cpp  main.cpp  utils.cpp
